--- a/Notes.html
+++ b/Notes.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>CP-4 HTML Notes</title>
+			<title>Your Average Sketchy Website</title>
 		</head>
 		<body>
-			<p>Identify as HTML: <!DOCTYPE html>
-			Everything has an opening and closing bracket, closing bracket having a /<br />
-			<head> Holds the metadata<br />
-			<title > Holds the title of the website --> what you see on the tab<br />
-			Between <p></p>, there would be a paragraph<br />
-			Within the <p>, you can place a <br /> which is a line break that skips a line for you</p>
+			<h1>CP-4 HTML Notes</h1>
+			<p>
+				Identify as HTML: <!DOCTYPE html>
+				Everything has an opening and closing bracket, closing bracket having a /<br />
+				< h e a d > Holds the metadata<br />
+				< t i t l e > Holds the title of the website --> what you see on the tab<br />
+				Between < p > < / p >, there would be a paragraph<br />
+				Within the < p >, you can place a < b r  / > which is a line break that skips a line for you. This is an example of a self-closing tag
+				< b o d y > contains the writing and the images
+				Indentation is an important aspect within HTML which allows the program to understand what is being written
+				< h 1 > is the title, with < h 2 >, < h 3 >, < h 4 >, etc. are sub-headers
+				< d i v > Used for dividing the text, while < s p a n > is used for shorter pieces of text
+			</p>
 		</body>
 	</html>
-	
-	
-Identify as HTML: <!DOCTYPE html>
-Everything has an opening and closing bracket, closing bracket having a /
-<head> Holds the metadata
-<title> Holds the title of the website --> what you see on the tab
-Between <p></p>, there would be a paragraph
-Within the <p>, you can place a <br /> which is a line break that skips a line for you
