--- a/Notes.html
+++ b/Notes.html
@@ -15,7 +15,11 @@
 				< b o d y > contains the writing and the images
 				Indentation is an important aspect within HTML which allows the program to understand what is being written
 				< h 1 > is the title, with < h 2 >, < h 3 >, < h 4 >, etc. are sub-headers
-				< d i v > Used for dividing the text, while < s p a n > is used for shorter pieces of text
+				< d i v > Used for dividing the text and writing what it is used as, while < s p a n > is used for shorter pieces of text
+				< e m > is for italics
+				< s t o n g > is bold
+				< u l > creates an unordered list in combination with < l i >
+				< i m g > Allows you to add an image it requires an attribute called < i m g  s r c = "image link" >
 			</p>
 		</body>
 	</html>
