--- a/Notes.html
+++ b/Notes.html
@@ -5,36 +5,44 @@
 		</head>
 		<body>
 			<h1>CP-4 HTML Notes</h1>
-				<div id="notes">
-				<p>
-					Identify as HTML: <!DOCTYPE html>
-					Everything has an opening and closing bracket, closing bracket having a /<br />
-					< h e a d > Holds the metadata<br />
-					< t i t l e > Holds the title of the website --> what you see on the tab<br />
-					Between < p > < / p >, there would be a paragraph<br />
-					Within the < p >, you can place a < b r  / > which is a line break that skips a line for you. This is an example of a self-closing tag
-					< b o d y > contains the writing and the images
-					Indentation is an important aspect within HTML which allows the program to understand what is being written
-					< h 1 > is the title, with < h 2 >, < h 3 >, < h 4 >, etc. are sub-headers
-					< d i v > Used for dividing the text and writing what it is used as, while < s p a n > is used for shorter pieces of text
-					< e m > is for italics
-					< s t o n g > is bold
-					< u l > creates an unordered list in combination with < l i >
-					< i m g > Allows you to add an image it requires an attribute called < i m g  s r c = "image link" >
-					< a > allows you to add a video link
-					< h r e f > is the reference, the link for image or video or website
-					c o n t a c t . h t m l, a b o u t . h t m l and i n d e x . h t m l are for
-					< n a v > is for internal links.
-					<  t a b l e > adds a table
-					< t r > adds a row
-					< t h > table head 
-					< s c o p e > --> 2 forms: row __ header for the row, col __ header for column
-					c o l s p a n is for data to spread over multiple columns
-					<t b o d y > sections off long lists
-					<t h e a d > makes a table head
-					< t f o o t > makes a table footer
-				</p>
+				<div id="HTML Notes">
+					<p>
+						Identify as HTML: <!DOCTYPE html>
+						Everything has an opening and closing bracket, closing bracket having a /<br />
+						< h e a d > Holds the metadata<br />
+						< t i t l e > Holds the title of the website --> what you see on the tab<br />
+						Between < p > < / p >, there would be a paragraph<br />
+						Within the < p >, you can place a < b r  / > which is a line break that skips a line for you. This is an example of a self-closing tag<br />
+						< b o d y > contains the writing and the images<br />
+						Indentation is an important aspect within HTML which allows the program to understand what is being written<br />
+						< h 1 > is the title, with < h 2 >, < h 3 >, < h 4 >, etc. are sub-headers<br />
+						< d i v > Used for dividing the text and writing what it is used as, while < s p a n > is used for shorter pieces of text<br />
+						< e m > is for italics<br />
+						< s t o n g > is bold<br />
+						< u l > creates an unordered list in combination with < l i ><br />
+						< i m g > Allows you to add an image it requires an attribute called < i m g  s r c = "image link" ><br />
+						< a > allows you to add a video link<br />
+						< h r e f > is the reference, the link for image or video or website<br />
+						c o n t a c t . h t m l, a b o u t . h t m l and i n d e x . h t m l are for<br />
+						< n a v > is for internal links.<br />
+						<  t a b l e > adds a table<br />
+						< t r > adds a row<br />
+						< t h > table head <br />
+						< s c o p e > --> 2 forms: row __ header for the row, col __ header for column<br />
+						c o l s p a n is for data to spread over multiple columns<br />
+						<t b o d y > sections off long lists<br />
+						<t h e a d > makes a table head<br />
+						< t f o o t > makes a table footer<br />
+					</p>
 				</div>
+			<h2>CSS Notes</h2>
+				<div id="CSS Notes">
+					<p>
+						< p s t y l e > can change the font colour, size, font, etc.<br />
+						< s t y l e > is an internal style of the program<br />
+					</p>
+				</div>
+			</h2>
 		</body>
 	</html>
 
