--- a/Notes.html
+++ b/Notes.html
@@ -40,9 +40,14 @@
 					<p>
 						< p s t y l e > can change the font colour, size, font, etc.<br />
 						< s t y l e > is an internal style of the program<br />
+						< l i n k > links an html element to the css element
+						< h r e f > anchor --> what you are linking the HTML website to
+						< r e l > is the relationship between the HTML and the CSS --> Stylesheet
+						< p > tag for the paragraph element
+						class one of the < p > as a title, brand, etc.
+						
 					</p>
 				</div>
 			</h2>
 		</body>
 	</html>
-
