--- a/Notes.html
+++ b/Notes.html
@@ -35,8 +35,8 @@
 						< t f o o t > makes a table footer<br />
 					</p>
 				</div>
-			<h2>CSS Notes</h2>
-				<div id="CSS Notes">
+			<h2>Basic CSS</h2>
+				<div id="Basic CSS">
 					<p>
 						< p s t y l e > can change the font colour, size, font, etc.<br />
 						< s t y l e > is an internal style of the program<br />
@@ -45,9 +45,20 @@
 						< r e l > is the relationship between the HTML and the CSS --> Stylesheet
 						< p > tag for the paragraph element
 						class one of the < p > as a title, brand, etc.
-						
+						the # is used to identify the class and is only used once
+						chaining selectors are used for writing CSS rules
+						ID --> class --> tags
+						!important ovverides any style
 					</p>
 				</div>
 			</h2>
+			<h3>Formatting Fonts, colours, etc</h3>
+				<div id="Formatting">
+					<p>
+						font-family changes the font, write the font following a semi-colon
+						font-size changes the size of the font, need to write the amount of pixels in px
+						
+					</p>
+				</div>
 		</body>
 	</html>
