--- a/Notes.html
+++ b/Notes.html
@@ -2,6 +2,7 @@
 	<html>
 		<head>
 			<title>Your Average Sketchy Website</title>
+			 <link href="style.css" type="text/css" rel="stylesheet">
 		</head>
 		<body>
 			<h1>CP-4 HTML Notes</h1>
@@ -57,7 +58,21 @@
 					<p>
 						font-family changes the font, write the font following a semi-colon
 						font-size changes the size of the font, need to write the amount of pixels in px
-						
+						font-weight changes the thickness of the font
+						text-align changes where you want the text to be: left, right, center
+						background-color changes the colour of th background
+						color changes the font colour
+						opacity is the transparency
+					</p>
+				</div>
+			<h4>Box Model</h4>
+				<div id="box model">
+					<p>
+						1- Width and height — specifies the width and height of the content area.
+						2- Padding — specifies the amount of space between the content area and the border.
+						3- Border — specifies the thickness and style of the border surrounding the content area and padding.
+						- border can be set to width, style and color
+						4- Margin — specifies the amount of space between the border and the outside edge of the element.
 					</p>
 				</div>
 		</body>
