--- a/Notes.html
+++ b/Notes.html
@@ -73,6 +73,16 @@
 						3- Border — specifies the thickness and style of the border surrounding the content area and padding.
 						- border can be set to width, style and color
 						4- Margin — specifies the amount of space between the border and the outside edge of the element.
+						Padding: The space between the contents of a box and the borders of a box
+						padding-top
+						padding-right
+						padding-bottom
+						padding-left
+						You an write ex. padding: 3px 4px 5px 6px; which go in a sequence of a clockwise manner
+						Margins is the same as padding in terms of formatting
+						min-width — this property ensures a minimum width of an element's box.
+						max-width — this property ensures a maximum width of an element's box.
+						
 					</p>
 				</div>
 		</body>
