Fixed css connection

--- a/Schedule.html
+++ b/Schedule.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>Loyola Schedule</title>
-			<link href="table.css" type="text/css" rel="stylesheet">
+			<link href="schedule.css" type="text/css" rel="stylesheet">
 			<!-- Links this html document with the table.css document for the edits to be made using css -->
 		</head>
 			
