Added a for loop and new Javascript

--- a/Schedule.html
+++ b/Schedule.html
@@ -6,10 +6,10 @@
 			<!-- Links this html document with the table.css document for the edits to be made using css -->
 		</head>
 		<body>
-			<!--<form id="searchBar">-->
-				<input type="text" onkeyup="myFunction()" placeholder="Search for classes...">
+			<form>
+				<input id="searchBar" type="text" placeholder="Search for classes...">
 				<input type="submit">
-			<!--</form>-->
+			</form>
 		<table>
 			<thead>
 			<!-- This is the top of the rows, so the titles -->
@@ -35,28 +35,28 @@
 				<tr>
 					<td>Period 1<br />8:20-9:20 am</td>
 					<td class = "Pe">Phys Ed<br />Mr. It<br />Gym 1</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334</td>
-					<td class = "Rel">Religion<br />Fr. Brennan<br />151</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
+					<td class = "Religion">Religion<br />Fr. Brennan<br />151</td>
 					<td class = "Pe">Phys Ed<br />Mr. It<br />Gym 1</td>
-					<td class = "Hist">History<br />Mr. Canola<br />208</td>
+					<td class = "History">History<br />Mr. Canola<br />208</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
-					<td class = "Hist">History<br />Mr. Canola<br />216</td>
-					<td class = "NS">NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "History">History<br />Mr. Canola<br />216</td>
+					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
 					<td>None</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
-					<td class = "Eng">English<br />Ms. Diaz<br />253</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
+					<td class = "English">English<br />Ms. Diaz<br />253</td>
 					<!-- some of the teachers in the rows -->
 				</tr>
 				<tr>
 					<td>Period 2<br />9:25-10:25 am</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334</td>
-					<td class = "Mus">Music<br />DJ Pasquins<br />333</td>
-					<td class = "NS">NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
+					<td class = "Music">Music<br />DJ Pasquins<br />333</td>
+					<td class = "Math>NS Math<br />Buckleys Guy<br />335</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
-					<td class = "Mus">Music<br />DJ Pasquins<br />333</td>
-					<td class = "NS">NS Math<br />Buckleys Guy<br />335</td>
-					<td class = "Eng">English<br />Ms.  Diaz<br />151</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
+					<td class = "Music">Music<br />DJ Pasquins<br />333</td>
+					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "English">English<br />Ms.  Diaz<br />151</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
@@ -64,28 +64,28 @@
 				</tr>
 				<tr>
 					<td>Period 3<br />10:40-11:40 am</td>
-					<td class = "Eng">English<br />Ms.  Diaz<br />253</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334</td>
-					<td class = "Rel">Religion<br />Fr. Brennan<br />153</td>
-					<td class = "Eng">English<br />Ms.  Diaz<br />253</td>
-					<td class = "Rel">Religion<br />Fr. Brennan<br />150</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
+					<td class = "English">English<br />Ms.  Diaz<br />253</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
+					<td class = "Religion">Religion<br />Fr. Brennan<br />153</td>
+					<td class = "English">English<br />Ms.  Diaz<br />253</td>
+					<td class = "Religion">Religion<br />Fr. Brennan<br />150</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
 					<td><br />None</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
 				</tr>
 				<tr>
 					<td>Period 4<br />12:30-1:00 pm</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
-					<td class = "Sp">Speech<br />Mr. Sir<br />135</td>
-					<td class = "Hr">Homeroom<br />Ms. Some Roses<br />232</td>
-					<td class = "Hist">History<br />Mr. Canola<br />208</td>
-					<td class = "Sp">Speech<br />Mr. Sir<br />135</td>
-					<td class = "Mus">Music<br />DJ Pasquins<br />333</td>
+					<td class = "Speech">Speech<br />Mr. Sir<br />135</td>
+					<td class = "Homeroom">Homeroom<br />Ms. Some Roses<br />232</td>
+					<td class = "History">History<br />Mr. Canola<br />208</td>
+					<td class = "Speech">Speech<br />Mr. Sir<br />135</td>
+					<td class = "Music">Music<br />DJ Pasquins<br />333</td>
 					<td class = "LA">LA-4<br />Mr. Batman<br />Maclean Center</td>
-					<td class = "Hist">History<br />Mr. Canola<br />354</td>
+					<td class = "History">History<br />Mr. Canola<br />354</td>
 					<td>None</td>
 					<td>None</td>
 					<td>None</td>
@@ -93,73 +93,77 @@
 				<tr>
 					<td>Period 5<br />1:05-2:05 pm</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
-					<td class = "Hist">History<br />Mr. Canola<br />254</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334</td>
-					<td class = "NS">NS Math<br />Buckleys Guy<br />335</td>
-					<td class = "NS">NS Math<br />Buckleys Guy<br />335</td>
-					<td class = "Mus">Music<br />DJ Pasquins<br />333</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
-					<td class = "Eng">English<br />Ms.  Diaz<br />151</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334 & 232</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334 & 151</td>
+					<td class = "History">History<br />Mr. Canola<br />254</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
+					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "Music">Music<br />DJ Pasquins<br />333</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
+					<td class = "English">English<br />Ms.  Diaz<br />151</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334 & 232</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334 & 151</td>
 				</tr>
 				<tr>
 					<td>Period 6<br />2:10-3:05 pm</td>
-					<td class = "Rel">Religion<br />Fr. Brennan<br />153</td>
-					<td class = "NS">NS Math<br />Buckleys Guy<br />335</td>
-					<td class = "Eng">English<br />Ms.  Diaz<br />151</td>
-					<td class = "Fr">French<br />Ms. Some Roses<br />151</td>
-					<td class = "Sc">Science<br />Mr. Nannah<br />334</td>
-					<td class = "Hist">History<br />Mr. Canola<br />254</td>
-					<td class = "NS">NS Math<br />Buckleys Guy<br />335</td>
-					<td class = "Mus">Music<br />DJ Pasquins<br />333</td>
-					<td class = "Eng">English<br />Ms.  Diaz<br />253</td>
-					<td class = "Eng">English<br />Ms.  Diaz<br />254 & 253</td>
+					<td class = "Religion">Religion<br />Fr. Brennan<br />153</td>
+					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "English">English<br />Ms.  Diaz<br />151</td>
+					<td class = "French">French<br />Ms. Some Roses<br />151</td>
+					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
+					<td class = "History">History<br />Mr. Canola<br />254</td>
+					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "Music">Music<br />DJ Pasquins<br />333</td>
+					<td class = "English">English<br />Ms.  Diaz<br />253</td>
+					<td class = "English">English<br />Ms.  Diaz<br />254 & 253</td>
 					<td>None</td>
 				</tr>	
 			</tbody>
 		</table>
 		<!-- closes off the table making it complete -->
 		<script>
-			var classes = document.getElementById(searchBar);
-			switch (classes){
-				case Math:
-					console.log('Math1');
+			var selectedClass;
+			function highlightingStyle;
+			switch (selectedClass){
+				case 'Math':
+					selectedClass = 'Math';
 					break;
-				case Science:
-					console.log('Science1');
+				case 'Science':
+					selectedClass = 'Science';
 					break;
-				case French:
-					console.log('French1');
+				case 'French':
+					selectedClass = 'French';
 					break;
-				case English:
-					console.log('English1');
+				case 'English':
+					selectedClass = 'English';
 					break;
-				case History:
-					console.log('History1');
+				case 'History':
+					selectedClass = 'History';
 					break;
-				case Religion:
-					console.log('Religion1');
+				case 'Religion':
+					selectedClass = 'Religion';
 					break;
-				case Music:
-					console.log('Music1');
+				case 'Music':
+					selectedClass = 'Music';
 					break;
-				case ComputerPrograming:
-					console.log('Computer Programming1');
+				case 'ComputerPrograming':
+					selectedClass = 'Computer Programming';
 					break;
-				case Homeroom:
-					console.log('Homeroom1');
+				case 'Homeroom':
+					selectedClass = 'Homeroom';
 					break;
-				case Speech:
-					console.log('Speech1');
+				case 'Speech':
+					selectedClass = 'Speech';
 					break;
-				case LA:
-					console.log('LA-41');
+				case 'LA':
+					selectedClass = 'LA-4';
 					break;
 				default:
-				console.log('R.I.P.');
+					console.log('R.I.P.');
 			}
+			var className = document.getElementById("selectedClass").value ;
+			for (i=0 ; i<className.length ; i++)
 		</script>
+
 	</body>
 </html>
