--- a/Schedule.html
+++ b/Schedule.html
@@ -49,7 +49,7 @@
 					<td>Period 2<br />9:25-10:25 am</td>
 					<td class = "Science">Science<br />Mr. Nannah<br />334</td>
 					<td class = "Music">Music<br />DJ Pasquins<br />333</td>
-					<td class = "Math>NS Math<br />Buckleys Guy<br />335</td>
+					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
 					<td class = "CP">Comp Prog<br />Mr. Minecraft xd<br />320C</td>
 					<td class = "Music">Music<br />DJ Pasquins<br />333</td>
 					<td class = "Math">NS Math<br />Buckleys Guy<br />335</td>
@@ -161,9 +161,9 @@
 						console.log('R.I.P.');
 				}
 				var saveClass = document.getElementsByClassName(selectedClass);
-				for (i=0 ; i<className.length ; i++) {
-					
-				/*	"selectedClass" {background-color: yellow;}*/
+				for (i=0 ; i<saveClass.length ; i++) {
+					saveClass[i].style.backgroundColor = "yellow" ;
+					/*selectedClass {background-color: yellow;}*/
 				}
 			}
 		</script>
